name:                tapf-json
version:             0.1.0.0
synopsis:            A simplified Json parser using Parsec
-- description:
homepage:            https://github.com/pbv/tapf-json
license:             MIT
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2018 Pedro Vasconcelos
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Json.Types
                       Json.Parser
  build-depends:       base >= 4.7 && < 5,
                       parsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tapf-json
