cabal-version: 3.0
name:           tapf-json
version:        0.3
homepage:       https://github.com/pbv/tapf-json
author:         Pedro Baltazar Vasconcelos
maintainer:     pbv@dcc.fc.up.pt
copyright:      2021 Pedro Baltazar Vasconcelos
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/pbv/tapf-json

library
  exposed-modules:
      Parser
      Pretty
      Test
      Types
  other-modules:
      Paths_tapf_json
  hs-source-dirs:
      src
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , parsec
  default-language: Haskell2010
